[project]
name = "cyclegan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.1",
    "torch",
    "torchvision",
    "scikit-image",
    "dominate>=2.8.0",
    "Pillow>=10.0.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]